# File-tool

./: .dockerignore  .gitignore  Dockerfile  README.md  file-tool.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
debian/: changelog  control  copyright  rules
src/: __init__.py  main.py
src/operations/: __init__.py  file_operations.py
src/utils/: __init__.py  exceptions.py  helpers.py
tests/: conftest.py  test_file_operations.py  test_helpers.py  test_main.py
